<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Voice Control for Plex</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="stream_video_from_server">Stream video from the server</string>
    <string name="to_the_client">to the Client</string>
    <string name="resume_if_in_progress">Resume if in progress</string>
    <string name="search">Search</string>
    <string name="menu_about">About</string>
    <string name="about_text">Voice Control for Plex\n© 2013 Chris Bellew\nLicensed under GPLv3\n\nPlex is copyright Plex, Inc.</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_install_shortcut">Install Homescreen Shortcut</string>
    <string name="menu_tasker_import">Import Tasker Project</string>
    <string name="menu_install_tasker">Install Tasker</string>
    <string name="menu_install_utter">Install utter!</string>
    <string name="menu_install_autovoice">Install AutoVoice</string>
    <string name="menu_changelog">Changelog</string>
    <string name="feedback_voice">Voice</string>
    <string name="feedback_toast">Toast</string>
    <string name="now_playing_on">Now Playing On</string>
    <string name="voice">Voice</string>
    <string name="toast">Toast</string>
    <string name="scan_all">Scan All</string>
    <string name="not_set">not set</string>
    <string name="feedback">Feedback</string>
    <string name="errors">Errors</string>
    <string name="help_server">Select a Plex Media Server to stream from. If you have more than one media server, select \"Scan All\" to search all available servers for media. If you only have one, you should select it here as scanning all servers each time will take longer to trigger playback.</string>
    <string name="help_client">Select the default client to stream media to. You can easily stream to a different client by ending your search query with \"on &lt;client name&gt;\", where &lt;client name&gt; is the name of the Plex Client.</string>
    <string name="help_feedback">Select which type of feedback I should give you for informational messages and for errors.</string>
    <string name="help_errors">Select which type of feedback I should give you when I run into problems (can\'t find something to play, etc).</string>
    <string name="help_button_desc">Help Button</string>
    <string name="help_usage">Here are some examples to trigger playback:\n\nWatch V For Vendetta\nWatch Season 1 Episode 1 of Homeland\nWatch Breaking Bad Season 5 Episode 8\nWatch episode Once More With Feeling of Buffy The Vampire Slayer\nWatch the next episode of The Walking Dead\nWatch the latest episode of The Daily Show\nWatch Last Week Tonight (shorter, easier form of "Watch next episode of", if there are no matching movies found)\n\nFor Music:\n"Listen to Black Sands by Bonobo" (to play a single song)\nListen to the album Drink The Sea by The Glitch Mob\nListen to the album Music Has The Right To Children (Artist is optional. Specify if more than one match is found)\nListen to Pinback (play all songs by an artist, shuffled)\n\nFor playback:\nPause Playback\nResume Playback\nStop Playback\n\nSeeking:\nOffset 1 hour 15 minutes 30 seconds\nOffset 30 minutes 5 seconds\nForward 1 minute\nRewind 20 minutes\nBack 1 hour\n(For offset only, any combination of hours, minutes, and/or seconds, in that order)\n(You may also use \'timecode\' instead of \'offset\')\n(You may use \'Back\' instead of \'Rewind\')\n\nAudio and Subtitle Streams:\nCycle Subtitles\nCycle Audio\nsubtitle/subtitles off/on (anything with either "subtitle off/on" or "subtitles off/on" will work, e.g. "turn subtitles off", "subtitle on", etc)\n\n\nIf you don\'t have \"Resume if in progress\" checked, you can selectively resume by saying \"Resume watching\" instead of \"Watch\"\n\nYou can also specify a client by adding \"on &lt;client name&gt;\" to your spoken query.</string>
    <string name="help_usage_button">Usage Examples</string>
    <string name="tasker_instructions">Voice Control for Plex also works through utter! and AutoVoice, in combination with Tasker. Use the buttons below to visit the respective applications in the Google Play Store.</string>
    <string name="tasker_import_header">Voice Control For Plex also works with utter! and AutoVoice. Use the button below to import the Tasker project to enable this functionality.</string>
    <string name="install_tasker">Install Tasker</string>
    <string name="install_utter">Install utter!</string>
    <string name="install_autovoice">Install AutoVoice</string>
    <string name="import_tasker_project">Import Tasker Project</string>
    <string name="import_tasker_instructions">Tasker Project imported. I will now open Tasker. Please tap on the Home Icon->Import, then select Voice Control for Plex.\n\nIf you plan to use utter!, you MUST go to utter! Settings&#8209;>Advanced&#8209;>Try Again&#8209;>Select \"Send to Tasker\".</string>
    <string name="select_voice">Select Voice</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_to_play">Sorry, I couldn\'t find anything to play.</string>
    <string name="http_status_code_error">Sorry, but I got an error, HTTP status code: %d</string>
    <string name="got_error">Sorry, but I got an error: %s</string>
    <string name="client_not_specified">Sorry, you didn\'t specify a client in the main settings, or I couldn\'t find it.</string>
    <string name="found_more_than_one_album">I found more than one matching album. Please specify artist.</string>
    <string name="couldnt_find_album">Sorry, I couldn\'t find an album to play.</string>
    <string name="couldnt_find_track">Sorry, I couldn\'t find a track to play.</string>
    <string name="couldnt_find_episode">Sorry, I couldn\'t find the episode you specified.</string>
    <string name="found_more_than_one_show">Sorry, I found more than one matching show. Please be more specific.</string>
    <string name="couldnt_find">Sorry, I couldn\'t find %s.</string>
    <string name="couldnt_find_next">Sorry, I couldn\'t find %1$s, or else no episodes are on deck.</string>
    <string name="couldnt_find_season">Sorry, I couldn\'t find that season.</string>
    <string name="found_more_than_one_movie">I found more than one matching movie. Please be more specific.</string>
    <string name="now_watching_video">Now watching %1$s on %2$s.</string>
    <string name="playback_paused">Playback paused.</string>
    <string name="playback_resumed">Playback resumed.</string>
    <string name="playback_stopped">Playback stopped.</string>
    <string name="trigger_instructions">To trigger voice recognition, simply add the <b>Voice Control for Plex</b> shortcut on to your home screen via the menu.</string>
    <string name="title_changelog">What\'s New</string>
    <string name="changelog_close">Close</string>
    <string name="no_wifi_connection">No WiFi Connection</string>
    <string name="no_wifi_connection_message">A WiFi connection is required. Please check your WiFi settings and try again.</string>
    <string name="voice_prompt">Voice Control for Plex is listening</string>
    <string name="searching_for_plex_servers">Searching for Plex Servers</string>
    <string name="didnt_understand">Sorry, I didn\'t understand %s.</string>
    <string name="didnt_understand_that">Sorry, I didn\'t understand that.</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="create_shortcut_blurb">You may create a shortcut that uses a specific Server and Client, or one that will use whatever your current Server and Client are set to when run. Which would you like to do?</string>
    <string name="create_shortcut_blurb_no_servers">You may create a shortcut that uses a specific Server and Client, or one that will use whatever your current Server and Client are set to when run. However, you have not scanned for Servers and/or Clients yet, so you can only create a shortcut that uses the current Server and Client. Do you wish to continue?</string>
    <string name="specify_now">Specify Now</string>
    <string name="use_current">Use current Server/Client</string>
    <string name="shortcut_created">Shortcut created</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_title">Plex Login</string>
    <string name="login_message">Enter your Plex username and password below. These will not be saved - only your Authentication Token will be saved.</string>
    <string name="login_error">Sorry, there was an unknown error trying to log in.</string>
    <string name="logged_in">You are now logged in.</string>
    <string name="logged_out">You are now logged out.</string>
    <string name="sections">sections</string>
    <string name="searching_for">Searching for %s.</string>
    <string name="searching_for_episode">Searching for %1$s episode %2$s.</string>
    <string name="searching_for_show_season_episode">Searching for %1$s season %2$s episode %3$s.</string>
    <string name="searching_for_album">Searching for %1$s by %2$s.</string>
    <string name="pin_title">Plex login</string>
    <string name="pin_message">Please visit http://plex.tv/pin from your computer and enter the following code: %s.</string>
    <string name="button_manual">Manual</string>
    <string name="button_pin">Pin</string>
    <string name="login_unauthorized">Sorry, but I got an unauthorized login error. You will have to login again.</string>
    <string name="remote_scan_error">Sorry, but I got an error trying to access myPlex. You may have to logout and log back in.</string>
    <string name="searching_for_plex_clients">Searching for Plex Clients</string>
    <string name="select_plex_client">Select a Plex Client</string>
    <string name="no_thanks">No thanks</string>
    <string name="purchase_wear">Wear Support</string>
    <string name="menu_wear_options">Wear Options</string>
    <string name="cinema_trailers">Cinema Trailers</string>
    <string name="menu_email_device_logs">Email Device Logs</string>
    <string name="menu_chromecast_video">Chromecast Video Options</string>
    <string name="chromecast_video_options_header">Chromecast Video Quality</string>
    <string name="chromecast_video_local">Local Network</string>
    <string name="chromecast_video_remote">Remote Network</string>
    <string name="unauthorized_local_server_found_logged_out">I found one or more local servers but was denied access. Log in to Plex (via the Menu button) to attempt to access this server.</string>
    <string name="unauthorized_local_server_found_logged_in">I found one or more local servers but was denied access. Since you are already logged in to Plex, either log out and back in (in case your access token has changed), or verify your access to this server/servers.</string>
    <string name="menu_server">Server:</string>
    <string name="back">Back</string>
    <string name="to_get_the_most_out_of_vcfp">To get the most out of Voice Control for Plex, logging in to your Plex account is recommended.</string>
    <string name="login_to_plex">Login to Plex</string>
    <string name="usage_hints">Usage Hints</string>
    <string name="menu_google_now">Google Now Options</string>
    <string name="menu_local_video">Local Video Options</string>
    <string name="chromecast_video_description">Choose video resolution and bitrate settings for Chromecast playback. You may set separate settings for servers on the same wifi network (local) and for those on remote networks.</string>
    <string name="purchase_localmedia">Purchase Local Media Playback</string>
    <string name="purchase_chromecast">Purchase Chromecast Playback</string>
</resources>