<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/back"
            android:icon="@drawable/menu_back"
            android:onClick="navMenuSettingsBack" />
        <item android:id="@+id/menu_about"
              android:title="@string/menu_about"
              android:icon="@drawable/menu_about"
              android:onClick="showAbout" />
        <item android:id="@+id/menu_install_shortcut"
              android:icon="@drawable/menu_home"
              android:title="@string/menu_install_shortcut"
              android:onClick="installShortcut" />
        <item android:id="@+id/menu_usage_hints_switch"
              android:title="@string/usage_hints"
              android:icon="@drawable/menu_help"
              app:actionLayout="@layout/menu_usage_examples_switch"
              app:showAsAction="always"/>
        <item android:id="@+id/menu_donate"
              android:title="@string/menu_donate"
              android:icon="@drawable/menu_donate"
              android:onClick="donate"/>
        <item android:id="@+id/menu_feedback"
              android:title="@string/feedback"
              android:onClick="setFeedback"
              android:icon="@drawable/menu_feedback"/>
        <item android:id="@+id/menu_google_now"
              android:title="@string/menu_google_now"
              android:icon="@drawable/menu_google_now"
              android:onClick="googleNowOptions"/>
        <item android:id="@+id/menu_cinema_trailers"
              android:title="@string/cinema_trailers"
              android:icon="@drawable/menu_trailers"
              android:onClick="cinemaTrailers"/>
        <item android:id="@+id/menu_purchase_chromecast"
              android:title="@string/purchase_chromecast"
              android:icon="@drawable/menu_chromecast"
              android:visibility="gone"
              android:onClick="purchaseChromecast" />
        <item android:id="@+id/menu_purchase_localmedia"
              android:title="@string/purchase_localmedia"
              android:icon="@drawable/menu_local_video"
              android:onClick="showPurchaseLocalMedia"/>
        <item android:id="@+id/menu_purchase_wear"
              android:title="@string/purchase_wear"
              android:icon="@drawable/menu_wear"
              android:onClick="purchaseWear"/>
        <item android:id="@+id/menu_wear_options"
              android:title="@string/menu_wear_options"
              android:onClick="showWearOptions"
              android:icon="@drawable/menu_wear"
              android:visible="false"/>
        <item android:id="@+id/menu_local_video"
              android:title="@string/menu_local_video"
              android:icon="@drawable/menu_local_video"
              android:visible="false"
              android:onClick="showLocalVideoOptions"/>
        <item android:id="@+id/menu_chromecast_video"
              android:title="@string/menu_chromecast_video"
              android:onClick="showVideoOptions"
              android:icon="@drawable/menu_chromecast"
              android:visible="false"/>
        <item android:id="@+id/menu_tasker_import"
              android:title="@string/menu_tasker_import"
              android:icon="@drawable/menu_tasker"
              android:onClick="importTaskerProject">
        </item>
        <item android:id="@+id/menu_install_tasker"
              android:title="@string/menu_install_tasker"
              android:visible="false"
              android:icon="@drawable/menu_tasker"
              android:onClick="installTasker">
        </item>
        <item android:id="@+id/menu_install_utter"
              android:title="@string/menu_install_utter"
              android:icon="@drawable/menu_utter"
              android:visible="false"
              android:onClick="installUtter">
        </item>
        <item android:id="@+id/menu_install_autovoice"
              android:title="@string/menu_install_autovoice"
              android:visible="false"
              android:icon="@drawable/menu_autovoice"
              android:onClick="installAutoVoice">
        </item>
        <item android:id="@+id/menu_email_device_logs"
              android:title="@string/menu_email_device_logs"
              android:icon="@drawable/menu_email"
              android:onClick="emailDeviceLogs">
        </item>
        <item android:id="@+id/menu_changelog"
              android:title="@string/menu_changelog"
              android:icon="@drawable/menu_changelog"
              android:onClick="showChangelog">
        </item>
    </group>
</menu>