<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:background="@color/now_playing_background"
              android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help_usage_button"
        android:id="@+id/textView13"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/help_usage"
            android:id="@+id/textView2"
            android:textColor="@color/white"/>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_it"
        android:id="@+id/helpCloseButton"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>