<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:id="@+id/device_select_root"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/serverListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    <CheckBox
        android:id="@+id/serverListResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/resume_if_in_progress"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/unauthorizedLocalServerFoundFrameView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unauthorized_local_server_found_logged_out"
            android:id="@+id/unauthorizedLocalServerFoundTextViewLoggedOut"
            android:visibility="invisible"
            android:layout_margin="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unauthorized_local_server_found_logged_in"
            android:id="@+id/unauthorizedLocalServerFoundTextViewLoggedIn"
            android:visibility="invisible"
            android:layout_margin="25dp"/>
    </FrameLayout>

</LinearLayout>
